force-app/main/default/objects/fw1__Payment_Center_Setting__c/fw1__Payment_Center_Setting__c.object-meta.xml
<CustomObject>
    <label>Payment Center Setting</label>
    <nameField>
        <label>Payment Center Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Center Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>