force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Additional_Invoice_Recipient__c.field-meta.xml
<CustomField>
    <fullName>fw1__Additional_Invoice_Recipient__c</fullName>
    <inlineHelpText>A copy of every invoice will be sent to this email.</inlineHelpText>
    <label>Additional Invoice Recipient</label>
    <type>Email</type>
</CustomField>