force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Allow_Amount_Edit_On_Payment_Page__c.field-meta.xml
<CustomField>
    <fullName>fw1__Allow_Amount_Edit_On_Payment_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Amount Edit On Payment Page</label>
    <type>Checkbox</type>
</CustomField>