force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Allow_Partial_Payment_for_Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>fw1__Allow_Partial_Payment_for_Portal_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Partial Payment For External Users</label>
    <type>Checkbox</type>
</CustomField>