force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Apply_Credit_Memo_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>fw1__Apply_Credit_Memo_By_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For users who use contacts as their primary customers (as opposed to accounts), use this flag to apply credit memos by contact.</description>
    <label>Apply Credit Memo By Contact</label>
    <type>Checkbox</type>
</CustomField>