force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Attach_PDF_To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Attach_PDF_To_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When sending an invoice, you can have the PDF attached to the invoice record. This field serves as the default value.</inlineHelpText>
    <label>Attach PDF To Invoice</label>
    <type>Checkbox</type>
</CustomField>