force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Auto_Bill_Pay_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__Auto_Bill_Pay_Schedule_Id__c</fullName>
    <label>Auto Bill Pay Schedule Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>