force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Automatically_Enable_Auto_BillPay__c.field-meta.xml
<CustomField>
    <fullName>fw1__Automatically_Enable_Auto_BillPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Enable Auto-BillPay</label>
    <type>Checkbox</type>
</CustomField>