force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Bank_Authorization_Prompt__c.field-meta.xml
<CustomField>
    <fullName>fw1__Bank_Authorization_Prompt__c</fullName>
    <label>Bank Authorization Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>