force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Batch_Statement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>fw1__Batch_Statement_Frequency__c</fullName>
    <label>Batch Statement Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>