force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Billing_Period_Offset__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Period_Offset__c</fullName>
    <label>Billing Period Offset</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>