force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Button_Color__c.field-meta.xml
<CustomField>
    <fullName>fw1__Button_Color__c</fullName>
    <label>Button Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>