force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Carry_Over_Revolving_Balanc__c.field-meta.xml
<CustomField>
    <fullName>fw1__Carry_Over_Revolving_Balanc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field controls if the revolving balance from previous invoices will be moved to the new invoice and reflected as revolving balance</description>
    <label>Carry Over Revolving Balance</label>
    <type>Checkbox</type>
</CustomField>