force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__CC_Receipt_To_Invoice_CC_Recipients__c.field-meta.xml
<CustomField>
    <fullName>fw1__CC_Receipt_To_Invoice_CC_Recipients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Receipt To Invoice CC Recipients</label>
    <type>Checkbox</type>
</CustomField>