force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Clear_Non_Sensitive_Information__c.field-meta.xml
<CustomField>
    <fullName>fw1__Clear_Non_Sensitive_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear Non-Sensitive Information</label>
    <type>Checkbox</type>
</CustomField>