force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Close_Out_Invoice_Default__c.field-meta.xml
<CustomField>
    <fullName>fw1__Close_Out_Invoice_Default__c</fullName>
    <inlineHelpText>During a refund, an option to close out the related invoice is available. This setting defines the option&apos;s default value or behavior.</inlineHelpText>
    <label>Close Out Invoice Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>fw1__True_False_Hide</valueSetName>
    </valueSet>
</CustomField>