force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Color_Scheme__c.field-meta.xml
<CustomField>
    <fullName>fw1__Color_Scheme__c</fullName>
    <label>Color Scheme</label>
    <length>20</length>
    <type>Text</type>
</CustomField>