force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Create_Profile_By_Entity__c.field-meta.xml
<CustomField>
    <fullName>fw1__Create_Profile_By_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Profile For All Entities</label>
    <type>Checkbox</type>
</CustomField>