force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Credit_Card_Surcharge_Label__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Card_Surcharge_Label__c</fullName>
    <label>Credit Card Surcharge Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>