force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__CreditCard_Expiry_Job_Id_2__c.field-meta.xml
<CustomField>
    <fullName>fw1__CreditCard_Expiry_Job_Id_2__c</fullName>
    <description>Credit card expiry reminder job ID - for installments</description>
    <label>CreditCard Expiry Job Id 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>