force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__CreditCard_Expiry_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__CreditCard_Expiry_Job_Id__c</fullName>
    <label>CreditCard Expiry Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>