force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__CreditCard_Expiry_Notify_Days__c.field-meta.xml
<CustomField>
    <fullName>fw1__CreditCard_Expiry_Notify_Days__c</fullName>
    <label>CreditCard Expiry Notify Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>