force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__CreditCard_Expiry_Template_2__c.field-meta.xml
<CustomField>
    <fullName>fw1__CreditCard_Expiry_Template_2__c</fullName>
    <description>Credit card expiry template for installments</description>
    <label>CreditCard Expiry Template 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>