force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Custom_Css__c.field-meta.xml
<CustomField>
    <fullName>fw1__Custom_Css__c</fullName>
    <label>Custom CSS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>