force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Default_Credit_Memo_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>fw1__Default_Credit_Memo_Email_Message__c</fullName>
    <label>Default Email Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>