force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Default_Credit_Memo_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>fw1__Default_Credit_Memo_Email_Subject__c</fullName>
    <label>Default Email Subject</label>
    <type>TextArea</type>
</CustomField>