force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Default_Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>fw1__Default_Net_Terms__c</fullName>
    <inlineHelpText>Enter number of days</inlineHelpText>
    <label>Default Net Terms</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>