force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>fw1__Default_Payment_Method__c</fullName>
    <label>Default Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>eCheck</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>