force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Default_Recurring_As_Usage_Based__c.field-meta.xml
<CustomField>
    <fullName>fw1__Default_Recurring_As_Usage_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Recurring As Usage Based</label>
    <type>Checkbox</type>
</CustomField>