force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Default_Tax__c.field-meta.xml
<CustomField>
    <fullName>fw1__Default_Tax__c</fullName>
    <label>Default Tax</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>