force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Default_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>fw1__Default_Terms_And_Conditions__c</fullName>
    <label>Default Terms And Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>