force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Disable_Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>fw1__Disable_Email_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not include your users&apos; personal email signature on invoices, receipts, etc.</inlineHelpText>
    <label>Disable Email Signature</label>
    <type>Checkbox</type>
</CustomField>