force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Display_Invoice_Lines__c.field-meta.xml
<CustomField>
    <fullName>fw1__Display_Invoice_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When paying multiple invoices, invoice and PO numbers are displayed. Check this box to display invoice lines as well.</inlineHelpText>
    <label>Display Invoice Lines</label>
    <type>Checkbox</type>
</CustomField>