force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Display_Payment_Type_Selection__c.field-meta.xml
<CustomField>
    <fullName>fw1__Display_Payment_Type_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Payment Type Selection</label>
    <type>Checkbox</type>
</CustomField>