force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Display_Profile_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>fw1__Display_Profile_By_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display payment profiles by contact in payment pages. If no contact is provided, then display by account.</description>
    <label>Display Profile By Contact</label>
    <type>Checkbox</type>
</CustomField>