force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Display_Profile_by_Entity__c.field-meta.xml
<CustomField>
    <fullName>fw1__Display_Profile_by_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Entity Options</label>
    <type>Checkbox</type>
</CustomField>