force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Do_Not_Apply_Partial_Payments_To_Lines__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Apply_Partial_Payments_To_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do Not Apply Partial Payments To Invoice Lines</inlineHelpText>
    <label>Do Not Apply Partial Payments To Lines</label>
    <type>Checkbox</type>
</CustomField>