force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Do_Not_Default_Profile_on_Recurring__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Default_Profile_on_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Default Profile on Recurring</label>
    <type>Checkbox</type>
</CustomField>