force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Do_Not_Show_Auto_BillPay_Option__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Show_Auto_BillPay_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not show auto-billpay option during payment.</inlineHelpText>
    <label>Do Not Show Auto-BillPay Option</label>
    <type>Checkbox</type>
</CustomField>