force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Documents_Logo__c.field-meta.xml
<CustomField>
    <fullName>fw1__Documents_Logo__c</fullName>
    <description>ID of logo saved in Documents</description>
    <label>Documents Logo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>