force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Dunning_Age__c.field-meta.xml
<CustomField>
    <fullName>fw1__Dunning_Age__c</fullName>
    <label>Dunning Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>