force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Dunning_Options__c.field-meta.xml
<CustomField>
    <fullName>fw1__Dunning_Options__c</fullName>
    <label>Dunning Options</label>
    <length>10</length>
    <type>Text</type>
</CustomField>