force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Email_Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_Invoice_Template__c</fullName>
    <label>Email Invoice Template (OBSOLETE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Invoice 2.1</fullName>
            </value>
            <value>
                <fullName>Standard Invoice 2.6</fullName>
            </value>
            <value>
                <fullName>Standard Invoice 2.13</fullName>
            </value>
            <value>
                <fullName>Standard Invoice 2.14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>