force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Email_me_a_copy_of_invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_me_a_copy_of_invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When sending an invoice, you can have a copy emailed to you. This field serves as the default value.</inlineHelpText>
    <label>Email me a copy of invoice</label>
    <type>Checkbox</type>
</CustomField>