force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Enable_Asset_Tracking__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enable_Asset_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Asset Tracking</label>
    <type>Checkbox</type>
</CustomField>