force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Enable_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enable_Credit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card</label>
    <type>Checkbox</type>
</CustomField>