force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Enable_eCheck__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enable_eCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eCheck/ACH</label>
    <type>Checkbox</type>
</CustomField>