force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Enable_Line_Payment_Reporting__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enable_Line_Payment_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Line Payment Reporting</label>
    <type>Checkbox</type>
</CustomField>