force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Enable_More_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enable_More_Payment_Methods__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You can add (or remove) more payment options. Go to Setup | Objects | Payment | Additional Payment Method, more information here: http://kulturra.com/knowledge-base/add-payment-method/.

eCheck (or ACH) is enabled at the processor level</inlineHelpText>
    <label>More Payment Methods</label>
    <type>Checkbox</type>
</CustomField>