force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Enable_Pay_with_Paypal__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enable_Pay_with_Paypal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Pay with Paypal</label>
    <type>Checkbox</type>
</CustomField>