force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Enable_Payment_With_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enable_Payment_With_Credit_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow credit memos to be applied to invoices</inlineHelpText>
    <label>Credit Memo</label>
    <type>Checkbox</type>
</CustomField>