force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Enforce_Internal_CRUD_And_FLS__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enforce_Internal_CRUD_And_FLS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTERNAL FIELD: Please do not modify.</description>
    <label>Enforce Internal CRUD And FLS</label>
    <type>Checkbox</type>
</CustomField>