force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__External_Invoice_Number_Display_Format__c.field-meta.xml
<CustomField>
    <fullName>fw1__External_Invoice_Number_Display_Format__c</fullName>
    <inlineHelpText>Formats:
{0} - sequence number
{YYYY} - current year
{MM} - current month
{DD} - current day

Sample:
INV-{YYYY}{MM}{DD}-{0000} : INV-20140207-0001</inlineHelpText>
    <label>Display Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>