force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__External_Invoice_Number_Start__c.field-meta.xml
<CustomField>
    <fullName>fw1__External_Invoice_Number_Start__c</fullName>
    <label>Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>