force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Failed_Attempt1__c.field-meta.xml
<CustomField>
    <fullName>fw1__Failed_Attempt1__c</fullName>
    <label>1st Failed Attempt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>