force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Failed_Attempt_Final__c.field-meta.xml
<CustomField>
    <fullName>fw1__Failed_Attempt_Final__c</fullName>
    <label>Final Failed Attempt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>