force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Failed_Attempt_Retries__c.field-meta.xml
<CustomField>
    <fullName>fw1__Failed_Attempt_Retries__c</fullName>
    <label>Failed Attempt Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>