force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Failed_Auto_Payment_Template__c.field-meta.xml
<CustomField>
    <fullName>fw1__Failed_Auto_Payment_Template__c</fullName>
    <label>Failed Auto Payment Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>