force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Hide_Option_To_Close_Invoice_On_Refund__c.field-meta.xml
<CustomField>
    <fullName>fw1__Hide_Option_To_Close_Invoice_On_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Option To Close Invoice On Refund</label>
    <type>Checkbox</type>
</CustomField>