force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Invoice_Column_Fieldname__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Column_Fieldname__c</fullName>
    <label>Invoice Column Fieldname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>