force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Invoice_Column_Width__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Column_Width__c</fullName>
    <label>Invoice Column Width</label>
    <length>50</length>
    <type>Text</type>
</CustomField>