force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Invoice_Owner_Inherits_Recurring_Owner__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Owner_Inherits_Recurring_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Owner Inherits Recurring Owner</label>
    <type>Checkbox</type>
</CustomField>