force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Invoice_Receipt_Template__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Receipt_Template__c</fullName>
    <label>Invoice Receipt Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>