force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Is_Auto_Submit_On_Swipe__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Auto_Submit_On_Swipe__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Submit On Swipe</label>
    <type>Checkbox</type>
</CustomField>