force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Is_CreditCard_Expiry_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_CreditCard_Expiry_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CreditCard Expiry Scheduled</label>
    <type>Checkbox</type>
</CustomField>