force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Is_Save_Profile_As_Non_Default__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Save_Profile_As_Non_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Profile as non-default</label>
    <type>Checkbox</type>
</CustomField>