force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Logo_Max_Height__c.field-meta.xml
<CustomField>
    <fullName>fw1__Logo_Max_Height__c</fullName>
    <label>Logo Max Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>