force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Next_Fire_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Next_Fire_Date__c</fullName>
    <label>Next Fire Date</label>
    <type>Date</type>
</CustomField>