force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>fw1__Notification_Email__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>