force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Notify_User__c.field-meta.xml
<CustomField>
    <fullName>fw1__Notify_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notify User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Center_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>