force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Online_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Online_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charge</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>