force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Outstanding_Invoice_Job_Interval__c.field-meta.xml
<CustomField>
    <fullName>fw1__Outstanding_Invoice_Job_Interval__c</fullName>
    <label>Outstanding Invoice Job Interval</label>
    <length>50</length>
    <type>Text</type>
</CustomField>