force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Outstanding_Invoice_Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Outstanding_Invoice_Job_Start_Date__c</fullName>
    <label>Outstanding Invoice Job Start Date</label>
    <type>DateTime</type>
</CustomField>