force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Outstanding_Invoice_Job_Time__c.field-meta.xml
<CustomField>
    <fullName>fw1__Outstanding_Invoice_Job_Time__c</fullName>
    <label>Outstanding Invoice Job Time</label>
    <length>2</length>
    <type>Text</type>
</CustomField>