force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Payment_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Notification_Email__c</fullName>
    <inlineHelpText>A copy of payment receipts will be sent to this address every time a payment is made.</inlineHelpText>
    <label>Payment Notification Email</label>
    <type>Email</type>
</CustomField>