force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Payment_Receipt_Template__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Receipt_Template__c</fullName>
    <label>Payment Receipt Template (OBSOLETE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Payment Receipt 2.10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>