force-app/main/default/objects/fw1__Payment_Center_Setting__c/fields/fw1__Payment_Timeout__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Timeout__c</fullName>
    <label>Payment Timeout</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>